updated to version 14.10.3

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,20 @@
+fpgamake (14.10.3-2precise1) precise; urgency=high
+
+  * Fixed install script
+
+ -- Jamey Hicks <jamey.hicks@gmail.com>  Mon, 27 Oct 2014 11:27:12 -0400
+
+fpgamake (14.10.3-1precise1) precise; urgency=low
+
+  * Update ipcore.tcl script to handle zedboard BOARD_PART
+
+ -- Jamey Hicks <jamey.hicks@gmail.com>  Mon, 27 Oct 2014 11:02:17 -0400
+
 fpgamake (14.10.2-1precise1) precise; urgency=low
 
   * Set executable mode on /usr/share/fpgamake/fpgamake
 
- -- Jamey Hicks <jamey.hicks@gmail.com>  Thu, 23 Oct 2014 11:05:35 -0400
+ -- Jamey Hicks <jamey.hicks@gmail.com>  Mon, 27 Oct 2014 11:01:41 -0400
 
 fpgamake (14.10.1-1precise1) precise; urgency=low
 
