--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+fpgamake (14.11.1-1precise1) precise; urgency=low
+
+  * Updated to version 14.11.1, added tcl/program_bpi_flash.tcl
+
+ -- Jamey Hicks <jamey.hicks@gmail.com>  Mon, 17 Nov 2014 16:25:53 -0500
+
 fpgamake (14.10.4-1precise1) precise; urgency=high
 
   * Just set PART property of current_project in ipcore.tcl
