--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+fpgamake (14.12.1-1precise1) precise; urgency=medium
+
+  * Updated to 14.12.2, improved unused clock deletion.
+
+ -- Jamey Hicks <jamey.hicks@gmail.com>  Thu, 04 Dec 2014 11:41:18 -0500
+
 fpgamake (14.11.1-1precise1) precise; urgency=low
 
   * Updated to version 14.11.1, added tcl/program_bpi_flash.tcl
