--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+fpgamake (15.04.1-1) trusty; urgency=medium
+
+  * Updated instructions, added dependence on buildcache.
+
+ -- Jamey Hicks <jamey.hicks@gmail.com>  Thu, 16 Apr 2015 11:08:30 -0400
+
 fpgamake (15.02.1-1trusty1) trusty; urgency=medium
 
   * Updated to 15.02.1
