--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-fpgamake (15.04.1-1) trusty; urgency=medium
+fpgamake (15.04.1-1trusty1) trusty; urgency=medium
 
   * Updated instructions, added dependence on buildcache.
 
