--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+fpgamake (15.09.1-1trusty1) trusty; urgency=medium
+
+  * 15.09.1: --implconstraint 
+
+ -- Jamey Hicks <jamey.hicks@gmail.com>  Wed, 23 Sep 2015 08:25:48 -0400
+
 fpgamake (15.06.1-1trusty1) trusty; urgency=medium
 
   * 15.06.1: make stubs stubbier
