--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+fpgamake (18.08.1-1trusty1) trusty; urgency=medium
+
+  * unmanaged impl constraints
+
+ -- Jamey Hicks <jamey.hicks@gmail.com>  Tue, 28 Aug 2018 11:17:43 -0400
+
 fpgamake (18.05.1-1trusty1) trusty; urgency=medium
 
   * Added support to detect Xilinx Ultrascale and UltrascalePlus parts
