--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+fpgamake (22.05.23-1trusty1) trusty; urgency=medium
+
+  * python3 support, build for jammy jellyfish
+
+ --  <jamey.hicks@gmail.com>  Mon, 23 May 2022 11:07:44 -0400
+
 fpgamake (18.08.1-1trusty1) trusty; urgency=medium
 
   * unmanaged impl constraints
